# manus_zmq_python

./: .gitattributes  README.md  pyproject.toml
examples/: print_glove_data.py  visualize_hand.py
manus_glove/: __init__.py  client.py
server/: CMakeLists.txt
server/src/: main.cpp  manus_zmq_server.cpp  manus_zmq_server.hpp
